[package]
authors = ["FL03 <jo3mccain@icloud.com>", "Scattered-Systems (https://scattered-systems.com)"]
categories = ["development-tools", "network-programming"]
description = "This crate implements the networking features required for the hybrid blockchain network, Disarray"
edition = "2021"
homepage = "https://scattered-systems.github.io/disarray"
keywords = ["async", "scsys"]
license = "Apache-2.0"
name = "disarray-network"
readme = "README.md"
repository = "https://github.com/scattered-systems/disarray"
version = "0.1.21" # TODO - Update the cargo package version

[features]
default = []

minis = ["disarray-minis/full"]

[lib]
crate-type = ["cdylib", "rlib"]
test = true

[build-dependencies]

[dev-dependencies]
disarray-core = { path = "../core" }

[dependencies]
algae = { features = ["full"], version = "0.1.15" }
crossbeam = "0.8.2"
disarray-ledger = { path = "../ledger", version = "0.1.20" }
disarray-minis = { optional = true, path = "../minis", version = "0.1.20" }
log = "0.4.17"
mio = { features = ["os-ext", "os-poll", "net"], version = "0.8.5" }
mio-extras = "2.0.6"
scsys = { features = ["full"], version = "0.1.36" }
serde = { features = ["derive"], version = "1.0.149" }
serde_json = "1.0.89"
strum = { features = ["derive"], version = "0.25.0" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { features = ["macros"], version = "1.22.0" }

[dependencies.libp2p]
features = [
    "autonat",
    "dns",
    "ecdsa",
    "floodsub", 
    "identify",
    "kad",
    "macros",
    "mdns",
    "metrics",
    "mplex", 
    "noise",
    "ping",
    "pnet",
    "quic",
    "request-response",
    "rsa",
    "secp256k1",
    "serde",
    "tcp",
    "tokio",
    "wasm-bindgen",
    "wasm-ext",
    "wasm-ext-websocket",
    "websocket"
]
version = "0.51.3"
